# mcp-agent-rag

./: .gitignore  <MagicMock name='Config.get_default_data_dir().__truediv__().__truediv__()' id='139939754562560'>  <MagicMock name='Config.get_default_data_dir().__truediv__().__truediv__()' id='140506740176752'>  <MagicMock name='Config.get_default_data_dir().__truediv__().__truediv__()' id='140541250636016'>  =1.7.0  CHANGELOG.md  CODY_IMPLEMENTATION.md  DEBUG_LOGGING_SUMMARY.md  DEBUG_LOGGING_TEST.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_DEBUG_LOGGING.md  ISSUE_RESOLUTION.md  LOG_FILE_FIX_SUMMARY.md  MCP_IMPLEMENTATION.md  README.md  TESTING.md  install.py  logfile.txt  mcp-rag-cli.py  mcp-rag.py  pyproject.toml  test_debug_logging_integration.py  verify_debug_logging_fix.py
docs/: ENHANCED_RAG.md  MIGRATION_GUIDE.md  OLLAMA_THINKING_FIX.md  P0_FEATURES_SUMMARY.md  P1-P4_IMPLEMENTATION.md  P1-P4_QUICK_REFERENCE.md
src/mcp_agent_rag/: __init__.py  chat.py  chat_cli.py  cli.py  config.py  database.py  enhanced_config.py
tests/: conftest.py
tests/acceptance/: test_acceptance.py
tests/unit/: test_agent.py  test_agno_ollama_patch.py  test_archive_extractor.py  test_bm25.py  test_cache.py  test_chat.py  test_chat_cli.py  test_chat_cli_logging.py  test_citations.py  test_cli.py  test_cli_coverage.py  test_config.py  test_database.py  test_database_coverage.py  test_debug_logger.py  test_document_image_extraction.py  test_embedder.py  test_enhanced_rag.py  test_extractor.py  test_extractor_coverage.py  test_generator.py  test_gpu_utils.py  test_image_extraction.py  test_import_export_integration.py  test_install.py  test_manifest.py  test_mcp_tools.py  test_metrics.py  test_ocr_warning_fix.py  test_office_formats.py  test_ollama_utils.py  test_pdf_warning_suppression.py  test_prefix_functionality.py  test_protocol_version.py  test_reranker.py  test_semantic_chunker.py  test_server.py  test_text_processor.py  test_transports.py  (+2 more)
(+29 files in other folders)
